# swan_testing

./: README.md  main.py  pyproject.toml
src/swan_testing/: plotting.py
src/swan_testing/current_generator/: __init__.py  const.py  current_generator.py  exp_const.py  flat.py  null.py  smooth_const.py
src/swan_testing/current_receiver/: __init__.py  current_receiver.py  fhn.py
src/swan_testing/model_tests/: __init__.py  grid.py  param_array.py  update_train.py
src/swan_testing/soma/: __init__.py  current.py  soma.py
testing/fhn/: n_spikes.py  plot_soma.py
